styles/editor.less
// Mini Editor
// -------------------

// Mini Editors are the "text inputs" used in find+replace or in the settings.

atom-text-editor[mini] {
  display: flex;
  align-items: center;
  padding-left: @component-padding / 2;
  color: @text-color;
  min-height: 28px;
  max-height: 100%;
  border: none;
  border-radius: @component-border-radius;
  background-color: @input-background-color;
  box-shadow: inset 0 0 0 1px fade(@white-color, 10%),
    0 0 0 1px fade(@black-color, 5%);

  > div {
    background: none !important;
  }

  &.is-focused {
    background-color: lighten(@input-background-color, 2%);
    box-shadow: inset 0 0 0 1px fade(@white-color, 0%),
      0 0 0 1px fade(@blue-color, 30%), 0 0 0 3px fade(@blue-color, 50%);

    .selection .region {
      background: @region-selection-color;
    }
  }

  .selection .region {
    background: transparent !important;
  }

  .placeholder-text {
    color: @text-color-subtle;
  }

  .lines {
    padding-left: 0;
  }

  .cursor-line {
    position: relative;
    background: fade(@white-color, 5%) !important;

    &::before {
      display: none;
    }
  }
}

.lines {
  padding-left: 3px;

  .cursor-line {
    position: relative;
    background: fade(@white-color, 5%) !important;

    &::before {
      content: "";
      position: absolute;
      left: -3px;
      top: 0;
      bottom: 0;
      width: 3px;
      background: fade(@white-color, 5%) !important;
    }
  }
}

atom-text-editor.editor {
  .gutter {
    background: fade(@black-color, 25%);
    box-shadow: inset -1px 0 0 fade(@white-color, 10%);

    .line-number {
      color: @text-color-subtle;
      padding-right: 4px;
      background: fade(@black-color, 5%);

      &.cursor-line {
        color: @light-color !important;
        opacity: 1;
        background: fade(@white-color, 10%) !important;
      }

      &.cursor-line-no-selection {
        background: fade(@white-color, 15%) !important;
      }

      &.git-line-modified {
        border: none;

        &::before {
          content: "";
          position: absolute;
          right: 0;
          width: 2px;
          top: 0;
          bottom: 0;
          background: fade(@orange-color, 100%);
        }
      }

      &.git-line-added {
        border: none;

        &::before {
          content: "";
          position: absolute;
          right: 0;
          width: 2px;
          top: 0;
          bottom: 0;
          background: fade(@green-color, 100%);
        }
      }

      &.git-line-removed:before,
      &.git-previous-line-removed:before {
        left: auto;
        right: -4px;
        z-index: 4;
        bottom: 0;
        border-left: 5px solid @red-color;
        border-top-width: 3px;
        border-bottom-width: 3px;
      }
    }
  }

  .gutter[gutter-name="github-comment-icon"] {
    order: -99;
    margin-right: -1px;
    min-width: 2em;
    background: fade(@black-color, 25%);

    .github-editorCommentGutterIcon.react-atom-decoration {
      padding: 0;

      .icon-comment::before {
        color: @blue-color;
        margin-top: 1px;
        margin-right: 1px;
      }
    }
  }

  .github-editorCommentHighlight {
    box-shadow: inset 0 0 0 1px fade(@blue-color, 15%);
    width: calc(~"100% " - 6px);
    background: fade(@blue-color, 5%);

    &.cursor-line {
      box-shadow: inset 0 0 0 1px fade(@blue-color, 15%);
      background: fade(@blue-color, 15%) !important;
    }
  }

  .selection .region {
    border-radius: 0;
    background: fade(@white-color, 15%) !important;
  }

  .wrap-guide {
    background: none;
    border-right: 1px dotted fade(@white-color, 10%);
  }

  .invisible-character, .indent-guide {
    color: fade(@white-color, 10%);
  }

  .indent-guide {
    box-shadow: none;
    border-left: 1px dashed fade(@white-color, 5%);
  }
}

.hypest-light-syntax {
  atom-text-editor[mini] {
    &.is-focused {
      .selection .region {
        background: @region-selection-color !important;
      }
    }
    .selection .region {
      background: transparent;
    }
  }
  .lines {
    .cursor-line {
      background: @lighter-color !important;

      &::before {
        background: @lighter-color !important;
      }
    }
  }
  atom-text-editor.editor {
    .gutter {
      background: @lighter-color;
      box-shadow: inset -1px 0 0 fade(@dark-color, 10%);
      .line-number {
        color: lighten(@mid-color, 20%);
        background: @lighter-color;
        box-shadow: inset -1px 0 0 fade(@dark-color, 10%);
        &.cursor-line {
          color: lighten(@mid-color, 5%) !important;
          background: @light-color !important;
        }
        &.cursor-line-no-selection {
          background: @light-color !important;
        }
      }
    }
    .gutter[gutter-name="github-comment-icon"] {
      background: @white-color;
    }
    .github-editorCommentHighlight {
      &.cursor-line {
        box-shadow: inset 0 0 0 1px @light-color;
        background: @lighter-color !important;
      }
    }
    .selection .region {
      background: #cfe9ff !important;
    }
    .wrap-guide {
      border-right: 1px dotted darken(@light-color, 5%);
    }
    .invisible-character, .indent-guide {
      color: darken(@light-color, 5%);
    }
    .indent-guide {
      border-left: 1px dashed darken(@light-color, 5%);
    }
  }
}

